# DayDayArXiv

./: .coverage  .cursorignore  .env.sample  .gitignore  404.html  AGENTS.md  IMPROVEMENTS.md  README.md  daydayarxiv.toml.example  fetch_arxiv.py  index.html  index.txt  langfuse_llm.py  paper_type.py  pyproject.toml  task_manager.py  uv_action_doc.md
.github/workflows/: build-frontend.yml  update.yml
data/: index.json
data/2024-01-01/: cs.AI.json
data/2024-01-02/: cs.AI.json
data/2024-01-03/: cs.AI.json  cs.AI_raw.json
data/2024-01-04/: cs.AI.json
data/2024-01-05/: cs.AI.json  cs.AI_raw.json
data/2024-01-06/: cs.AI.json  cs.AI_raw.json
data/2024-01-07/: cs.AI.json  cs.AI_raw.json
data/2024-01-09/: cs.AI_raw.json
data/2024-01-10/: cs.AI_raw.json
data/2024-01-11/: cs.AI.json  cs.AI_raw.json
data/2024-01-12/: cs.AI.json
data/2024-01-13/: cs.AI.json  cs.AI_raw.json
data/2024-01-14/: cs.AI.json  cs.AI_raw.json
data/2024-01-15/: cs.AI_raw.json
data/2024-01-16/: cs.AI_raw.json
data/2024-01-18/: cs.AI.json
data/2024-01-19/: cs.AI.json  cs.AI_raw.json
data/2024-01-20/: cs.AI.json  cs.AI_raw.json
data/2024-01-21/: cs.AI.json
data/2024-01-22/: cs.AI.json
data/2024-01-23/: cs.AI.json  cs.AI_raw.json
data/2024-01-25/: cs.AI.json  cs.AI_raw.json
data/2024-01-28/: cs.AI_raw.json
data/2024-01-29/: cs.AI.json  cs.AI_raw.json
data/2024-01-30/: cs.AI.json
data/2024-02-01/: cs.AI_raw.json
data/2024-02-02/: cs.AI.json
data/2024-02-03/: cs.AI.json
data/2024-02-04/: cs.AI.json  cs.AI_raw.json
data/2024-02-05/: cs.AI.json
data/2024-02-06/: cs.AI.json  cs.AI_raw.json
data/2024-02-08/: cs.AI.json  cs.AI_raw.json
data/2024-02-10/: cs.AI.json
data/2024-02-11/: cs.AI.json
data/2024-02-12/: cs.AI.json  cs.AI_raw.json
data/2024-02-14/: cs.AI_raw.json
data/2024-02-15/: cs.AI.json  cs.AI_raw.json
data/2024-02-17/: cs.AI_raw.json
data/2024-02-19/: cs.AI.json
data/2024-02-20/: cs.AI.json  cs.AI_raw.json
data/2024-02-21/: cs.AI.json  cs.AI_raw.json
data/2024-02-23/: cs.AI.json
data/2024-02-24/: cs.AI.json
data/2024-02-25/: cs.AI.json
data/2024-02-26/: cs.AI_raw.json
data/2024-02-27/: cs.AI.json
daydayarxiv_frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
prompts/: __init__.py  daily_summary_prompt.py  tldr_prompt.py  translate_title_prompt.py
work/: criteria.md  plan.md  todo.csv
(+1768 files in other folders)
