[project]
name = "daydayarxiv"
version = "0.1.0"
description = "Daily arXiv information website. Python part is an updator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.3",
    "langfuse>=2.59.7",
    "loguru>=0.7.3",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
]
