[project]
name = "daydayarxiv"
version = "0.1.0"
description = "Daily arXiv information website. Python part is an updator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "logfire>=4.14.2",
    "loguru>=0.7.3",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
